# bazel-qt-example

labs/basics/: mainwindow.cpp  mainwindow.h
labs/lab1task2/: BUILD  main.cpp  mainwindow.cpp  mainwindow.h
labs/raycaster/: .bzl  .qrc  BUILD.bazel  CMakeLists.txt  Controller.cpp  Controller.h  LightSource.cpp  LightSource.h  MainWindow.cpp  MainWindow.h  Polygon.cpp  Polygon.h  README.md  Ray.cpp  Ray.h  RenderArea.cpp  RenderArea.h  Settings.cpp  Settings.h  main.cpp
